TDescription no longer overflows out of the box

--- a/src/components/IndividualMoviePage/IndividualMoviePage.css
+++ b/src/components/IndividualMoviePage/IndividualMoviePage.css
@@ -13,6 +13,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 
@@ -43,19 +44,20 @@
 }
 .individualMoviePage .column .movieDescription {
   width: 985px;
-  height: 70px;
+  min-height: 70px;
+  /* height: 70px; */
 
   background: #a8b8b6;
   /* border: 1px solid #000000; */
   box-sizing: border-box;
   border-radius: 10px;
-  /* inline-size: min-content;
-  overflow-wrap: word-break; */
+  /* inline-size: min-content; */
+  overflow-wrap: word-break;
   margin-top: 3%;
   padding-top: 1%;
   padding-left: 3%;
   padding-right: 5%;
-  /* padding-bottom: 8%; */
+  padding-bottom: 1%;
 }
 
 .individualMoviePage .column .movieDescription p {
